--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,4 @@
-@import './variables.scss';
+@import './parts//variables.scss';
 @import './views/users.scss';
 @import './views/userDetail.scss';
 
@@ -32,7 +32,16 @@ button {
     border: none;
     border-radius: 4px;
     box-shadow: 0 3px 6px rgba(16,27,30,0.4);
+    font-family: raleway;
     text-transform: uppercase;
     transition: transform .2s;
     cursor: pointer;
+}
+
+input {
+    font-family: raleway;
+}
+
+.hidden {
+    display: none;
 }
